--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Crawfish_fish.odessa",
+  "name": "c",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://167899.github.io/Crawfish_fish.odessa/",
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
   },
@@ -36,6 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    
   }
 }
